--- a/style.css
+++ b/style.css
@@ -17,10 +17,13 @@ label{
     font-size: 1.6rem;
 }
 input{
-    width: 25%;
+    width: 20%;
     margin: auto;
     margin-top: 0.5rem;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
+    padding: 5px;
+    border: 4px solid black;
+    border-radius: 5px;
 }
 
 button{
@@ -30,7 +33,7 @@ button{
     border-radius: 0.5rem;
     font-size: 1.3rem;
     font-weight: bold;
-    box-shadow: 5px 6px 12px 1px rgba(0, 0, 0, 0.24);
+    box-shadow: 6px 8px 12px 1px rgba(0, 0, 0, 0.24);
     cursor: pointer;
     outline: none;
     transition: 0.2s all;
