Updated Favicom & Background

--- a/style.css
+++ b/style.css
@@ -1,95 +1,124 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;800&display=swap');
+
 .container{
-    display: flex;
-    flex-direction: column;
-    width: 40%;
-    margin: auto;
-    text-align: center;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  display: flex;
+  flex-direction: column;
+  width: 45%;
+  margin: auto;
+  text-align: center;
 }
 h1{
-    font-size: 3rem;
+  font-family: 'Orbitron', sans-serif;
+  font-size: 3.2rem;
+  font-weight: 800;
+}
+.green{
+  color: green;
+}
+.red{
+  color: red;
 }
 .container p{
-    margin-top: -2rem;
-    font-size: 1.4rem;
+  margin-top: -2rem;
+  font-size: 1.4rem;
 }
 label{
-    margin-top: 2rem;
-    font-size: 1.6rem;
+  font-family: 'Orbitron', sans-serif;
+  margin-top: 2rem;
+  font-size: 1.6rem;
+  font-weight: 400;
 }
 input{
-    width: 20%;
-    margin: auto;
-    margin-top: 0.5rem;
-    font-size: 1.4rem;
-    padding: 5px;
-    border: 4px solid black;
-    border-radius: 5px;
+  width: 20%;
+  margin: auto;
+  margin-top: 0.5rem;
+  font-size: 1.4rem;
+  padding: 5px;
+  border: 4px solid black;
+  border-radius: 5px;
 }
 
 button{
-    background-color: #404040;
-    width: 20%;
-    padding: 0.4rem 0.8rem 0.4rem 0.8rem;
-    border-radius: 0.5rem;
-    font-size: 1.3rem;
-    font-weight: bold;
-    box-shadow: 6px 8px 12px 1px rgba(0, 0, 0, 0.24);
-    cursor: pointer;
-    outline: none;
-    transition: 0.2s all;
-    color: white;
-    border: 4px solid white; 
-    margin: auto;
-    margin-top: 4rem;
+  background-color: #404040;
+  width: 20%;
+  padding: 0.4rem 0.8rem 0.4rem 0.8rem;
+  border-radius: 0.5rem;
+  font-size: 1.3rem;
+  font-weight: bold;
+  box-shadow: 6px 8px 12px 1px rgba(0, 0, 0, 0.24);
+  cursor: pointer;
+  outline: none;
+  transition: 0.2s all;
+  color: white;
+  border: 4px solid white; 
+  margin: auto;
+  margin-top: 4rem;
 }
 button:hover{
-    background-color: white;
-    color: black;
-    border: 4px solid black;
+  background-color: white;
+  color: black;
+  border: 4px solid black;
 }
 button:active{
-    transform: scale(0.98);
-    box-shadow: 3px 2px 8px 1px rgba(0, 0, 0, 0.24);
+  transform: scale(0.98);
+  box-shadow: 3px 2px 8px 1px rgba(0, 0, 0, 0.24);
 }
-
+#myVideo{
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+h2{
+  font-family: 'Orbitron', sans-serif;
+  font-weight: 600;
+}
 .footer{
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 5rem;
-    border-top: 5px dotted black;
-    justify-content: center;
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 5rem;
+  justify-content: center;
 
   }
   .footer p{
-    margin-top: 1rem;
-    margin-bottom: auto;
-    color: black;
-    font-size: 1rem;
-    text-align: center;
+  margin-top: 1rem;
+  margin-bottom: auto;
+  color: white;
+  font-size: 1rem;
+  text-align: center;
   }
  
   .list-non-bullet {
-    list-style: none;
-    padding-inline-start: 0px;
-    text-align: center;
+  list-style: none;
+  padding-inline-start: 0px;
+  text-align: center;
 
   }
   
   .list-item-inlines {
-    display: inline-block;
-    width: 2rem;
-    margin: auto;
+  display: inline-block;
+  width: 2rem;
+  margin: auto;
   }
  
   .links .fa-brands{
-    color: black;
-    font-size: 1.2rem;
-    transition: .2s;
+  color: white;
+  font-size: 1.2rem;
+  transition: .2s;
   }
   .links .fa-brands:hover {
-    color: red;
+  color: red;
   }
 
   @media only screen and (max-width: 650px) {
