--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ h1{
 .red{
   color: red;
 }
-.container p{
+.tagline{
   margin-top: -2rem;
   font-size: 1.4rem;
 }
@@ -69,7 +69,7 @@ button:active{
   transform: scale(0.98);
   box-shadow: 3px 2px 8px 1px rgba(0, 0, 0, 0.24);
 }
-#myVideo{
+.vdo{
   position: fixed;
   right: 0;
   bottom: 0;
@@ -128,11 +128,28 @@ h2{
     h1{
       font-size: xx-large;
     }
-    p{
-      margin-bottom: 5px;
+    .tagline{
+      margin: auto;
       font-size: large;
+      margin-bottom: 1rem;
+    }
+    label{
+      font-size: large;
+      margin-top: 1rem;
+    }
+    input{
+      font-size: large;
+      width: 35%;
     }
     .btn{
-          width: 40%;
-      }
+      width: auto;
+      padding: 2px 5px;
+      margin-top: 2rem;
+    }
+    h2{
+      font-size: larger;
+      width: 98%;
+    }
+    
+
   }
